--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="col-md-7">
                 <div class="feature_article_wrapper">
                     <div class="feature_article_img">
-                        <img class="img-responsive top_static_article_img" src="assets/img/phpmyadmin-portada.jpg"
+                        <img class="img-responsive top_static_article_img" src="https://cdn.idntimes.com/content-images/post/20190524/facebook-privacy-35f32cea0dfba97ee4c6ae7588f9d141.jpg"
                              alt="feature-top">
                     </div>
                     <!-- feature_article_img -->
@@ -136,22 +136,22 @@
                     <div class="feature_article_inner">
                         <div class="tag_lg red"><a href="">New Information</a></div>
                         <div class="feature_article_title">
-                            <h1><a href="blog/cara-install-phpmyadmin-linux" target="_blank">Cara Install PhpMyAdmin dengan Nginx di Linux </a></h1>
+                            <h1><a href="blog/pentingnya-menjaga-privasi-di-sosial-media" target="_blank">Tips Menjaga Privasi di Sosial Media </a></h1>
                         </div>
                         <!-- feature_article_title -->
 
                         <div class="feature_article_date"><a href="#" target="_self">By F1KR7</a>,<a href="#"
-                                                                                                         target="_self">Nov
-                            21, 2022</a></div>
+                                                                                                         target="_self">Des
+                            12, 2022</a></div>
                         <!-- feature_article_date -->
 
                         <div class="feature_article_content">
-                            phpMyAdmin adalah aplikasi pengelola database dengan...
+                            Keberadaan media sosial bagi setiap orang kini sudah menjadi bagian dari...
                         </div>
                         <!-- feature_article_content -->
 
                         <div class="article_social">
-                            <span><i class="fa fa-share-alt"></i><a href="#">32</a>Shares</span>
+                            <span><i class="fa fa-share-alt"></i><a href="#">1</a>Shares</span>
                         </div>
                         <!-- article_social -->
 
@@ -239,6 +239,47 @@
 
             </div>
             <!-- col-md-5 -->
+            <!-- col-md-5 -->
+
+            <div class="col-md-5">
+                <div class="feature_static_last_wrapper">
+                    <div class="feature_article_img">
+                        <img class="img-responsive" src="assets/img/ubuntu.png" alt="feature-top">
+                    </div>
+                    <!-- feature_article_img -->
+
+                    <div class="feature_article_inner">
+                        
+
+                        <div class="feature_article_title">
+                            <h1><a href="blog/cara-install-phpmyadmin-linux/" target="_self">Cara Install PhpMyAdmin dengan Nginx di Linux</a></h1>
+                        </div>
+                        <!-- feature_article_title -->
+
+                        <div class="feature_article_date"><a href="authors/F1KR7" target="_self">By F1KR7</a>,<a href="#"
+                                                                                                         target="_self">Nov
+                            21, 2022</a></div>
+                        <!-- feature_article_date -->
+
+                        <div class="feature_article_content">
+                            phpMyAdmin adalah aplikasi pengelola database dengan...
+                        </div>
+                        <!-- feature_article_content -->
+
+                        <div class="article_social">
+                            <span><i class="fa fa-share-alt"></i><a href="#">32</a>Shares</span>
+                        </div>
+                        <!-- article_social -->
+
+                    </div>
+                    <!-- feature_article_inner -->
+
+                </div>
+                <!-- feature_static_wrapper -->
+
+            </div>
+            <!-- col-md-5 -->
+            
 
         </div>
         <!-- Row -->
