--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="col-md-5">
                 <div class="feature_static_last_wrapper">
                     <div class="feature_article_img">
-                        <img class="img-responsive" src="assets/img/ubuntu.png" alt="feature-top">
+                        <img class="img-responsive" src="https://raw.githubusercontent.com/fr7we8/website/main/uploads/linux-phpmyadmin.png" alt="feature-top">
                     </div>
                     <!-- feature_article_img -->
 
