--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <div class="widget_title widget_black">
         <h2><a href="#">F1KR7 - OWNER & DEVELOPER</a></h2>
     </div>
-    <div class="widget_body"><img class="img-responsive left" src="assets/img/team.png"
+    <div class="widget_body"><img class="img-responsive left" src="http://pa1.narvii.com/6998/2f57d1962586ef8b5b54ccd54826d8d1217c678ar1-300-300_00.gif"
                                   alt="Generic placeholder image">
 
         <p>NAMA: MUHAMMAD FIKRI</p><p>RANK: OWNER</p><p>POST: 3 Post</p>
